tooling/nargo_cli/tests/snapshots/execution_failure/shr_overflow_u64/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Attempt to bit-shift with overflow
  ┌─ src/main.nr:5:19
  │
5 │     let _result = x >> 100;
  │                   --------
  │

Error interpreting main function
